--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.43.4"
+    "@supabase/supabase-js": "^2.43.4",
+    "youtube-transcript": "^1.2.1"
   }
 }
